# tg_summarizer

./: .gitignore  README.md  creds.yaml  main.py  pyproject.toml
